web/styles/zulip.css
/* ... */
@media (width < $xl_min) or (height < $short_navbar_cutoff_height) {
    .spectator-view {
        #navbar-middle {
            /* = (width of button, square with header) * 3 (number of buttons) + 10px extra margin. */
            margin-right: calc(var(--header-height) * 3 + 10px);
        }

        #help-menu,
        #gear-menu {
            position: relative;
            right: var(--header-height);
        }

        #top_navbar .column-right .spectator_login_buttons {
            display: none;
        }
    }

    .header-main .column-right {
        /* For a diminutive right column in the navbar,
           allow the width to be that of the flexing
           button elements. */
        width: auto;
    }
}

%hide-right-sidebar {
    .column-right {
        display: none;

        &.expanded {
            /* In the extended state, we open the sidebar
               to its maximum possible size (otherwise, it
               would be unnecessarily too narrow). */
            --right-sidebar-width: var(--right-sidebar-max-width);
            display: block;
            position: absolute;
            float: none;
            right: 15px;
            top: 0;

            .simplebar-track.simplebar-vertical {
                right: 0;
            }

            .right-sidebar {
                box-shadow: 0 -2px 3px 0 hsl(0deg 0% 0% / 10%);
                border-left: 1px solid var(--color-border-sidebar);
                height: 100%;
                width: var(--right-sidebar-width);
                right: 0;
                background-color: var(--color-background);
            }
        }
    }
}

.hide-right-sidebar {
    .app-main {
        @extend %hide-right-sidebar;
    }

    #navbar-middle {
        margin-right: var(--right-column-collapsed-sidebar-width);
    }

    #compose-content,
    .app-main .column-middle {
        margin-right: 7px;
    }
}

.hide-right-sidebar-by-visibility .app-main .column-right {
    visibility: hidden;
}

.left-sidebar-toggle-button .zulip-icon-panel-left {
    display: none;
}

.column-middle.expanded {
    .left-sidebar-toggle-button .zulip-icon-panel-left {
        display: none;
    }

    .left-sidebar-toggle-button .zulip-icon-panel-left-dashed {
        display: block;
    }
}

%hide-left-sidebar {
    .left-sidebar-toggle-button .zulip-icon-panel-left {
        display: block;
    }

    .left-sidebar-toggle-button .zulip-icon-panel-left-dashed {
        display: none;
    }

    .column-left {
        display: none;

        &.expanded {
            /* In the extended state, we open the sidebar
               to its maximum possible size (otherwise, it
               would be unnecessarily too narrow). */
            --left-sidebar-width: var(--left-sidebar-max-width);
            display: block;
            position: absolute;
            float: none;
            left: 0;
            top: 0;

            .left-sidebar {
                background-color: var(--color-background);
                box-shadow: 0 2px 3px 0 hsl(0deg 0% 0% / 10%);
                border-right: 1px solid var(--color-border-sidebar);
                height: 100%;
                padding-left: 10px;
                width: var(--left-sidebar-width);
            }
        }
    }
}

.hide-left-sidebar {
    .app-main {
        @extend %hide-left-sidebar;
    }

    #compose-content,
    .app-main .column-middle {
        margin-left: 7px;
    }

    @container header-container (width > $cq_md_min) {
        #navbar-middle {
            margin-left: var(--middle-column-left-margin-fluid-layout);
        }
    }

    @container header-container (width < $cq_xl_min) {
        #top_navbar .column-left {
            width: auto;
        }
    }

    @container header-container (width < $cq_md_min) {
        #navbar-middle {
            margin-left: 0;
        }
    }

    @container app (width < $cq_xl_min) {
        #compose-content,
        .app-main .column-middle {
            margin-left: 7px;
        }
    }
}

/* Media-query fallback for the cinched-up logo presentation. */
@media (width > $md_min) {
    .without-container-query-support {
        &.hide-left-sidebar {
            #navbar-middle {
                margin-left: var(--middle-column-left-margin-fluid-layout);
            }
        }
    }
}

body:not(.hide-left-sidebar) {
    /* User can clearly see the unread count in the left sidebar. So,
       we don't need an indicator here as it will only serve as a disctraction. */
    #header-container .column-left .left-sidebar-toggle-unreadcount {
        display: none !important;
    }
}

/* We have some regrettable but temporarily necessary code duplication
   in the queries that follow.

   In browsers that support spec-aligned, em-aware container queries,
   we query on the app-main container. That enables breakpoints that
   look best at a chose base font size.

   However, in browsers that lag the spec, we fall back to the original
   media queries. The layout will not look as good as it could, but
   essential scrolling behavior will be maintained. */

@container header-container (width < $cq_xl_min) {
    #navbar-middle {
        /* = (width of button, square with header) * 4 (number of buttons) + 3px extra margin. */
        margin-right: var(--right-column-collapsed-sidebar-width);
    }
}

@container app (width < $cq_xl_min) {
    .app-main {
        @extend %hide-right-sidebar;

        .column-middle {
            margin-right: 7px;
        }
    }

    #typing_notifications,
    #scheduled_message_indicator,
    #compose-content {
        margin-right: 7px;
    }
}
/* ... */

