spectator_view: Fix search input overlap with Log in button.
This commit fixes the bug when search input overlaps with Log In
button in spectator for a some range of viewport width.

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -1732,7 +1732,7 @@ body:not(.hide-left-sidebar) {
    media queries. The layout will not look as good as it could, but
    essential scrolling behavior will be maintained. */
 
-@container header-container (width < $cq_xl_min) {
+@container header-container (width < $cq_lg_min) {
     #navbar-middle {
         /* = (width of button, square with header) * 4 (number of buttons) + 3px extra margin. */
         margin-right: var(--right-column-collapsed-sidebar-width);
